<resources>
    <string name="app_name">Login Screen</string>
    <string name="title">iLoma</string>
    <string name="login_button">Secure Login</string>
    <!--    <string name="email_hint">Email</string>-->

    <string name="email_hint">
    <font size="10">Email</font>
    </string>

    <string name="password_hint">
    <font size="10">Password</font>
    </string>


    <string name="signup_notification">Dont have an account ?</string>
    <string name="signup">Signup Now!</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">OR</string>
    <string name="sign_in_with_social_networks">Sign in with Social Networks</string>

    <string name="email_error">email-error</string>
    <string name="error_invalid_email">email-invalid-error</string>
    <string name="password_error">password-error2</string>
    <string name="error_invalid_password">error_invalid_password</string>



    <string-array name = "days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>







</resources>