<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="60sp"

        />

    <EditText
        android:id="@+id/email"
        android:layout_below="@+id/title"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:gravity="center"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="1dp"
        android:paddingBottom="15dp"


        />



    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:gravity="center"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/ic_baseline_keyboard_24"
        android:drawablePadding="1dp"
        android:paddingBottom="15dp"

        />


    <Button
        android:id="@+id/confirm_button"

        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/login_button"
        android:background="@drawable/custom_button"
        android:textSize="16sp"
        android:fontFamily="@font/xanadu"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:paddingLeft="80dp"
        android:paddingRight="50dp"




        />



    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"

            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_notification"
            android:textColor="@color/white"
            android:textSize="12sp"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:linksClickable="true"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:layout_marginLeft="-20dp"



            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:background="@color/white" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/sign_social"
        android:layout_below="@+id/linear"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_social_networks"
        android:textColor="@color/white"
        android:textSize="12sp"
        />


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_social"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button

            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/facebookbutton_drawable"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:drawableLeft="@drawable/ic_baseline_facebook_24"
            android:paddingLeft="10dp"/>

        <Button

            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/googlebutton_drawable"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>